--- a/website/backend/package.json
+++ b/website/backend/package.json
@@ -9,7 +9,13 @@
     "test": "echo \"No tests implemented yet - placeholder for future testing\"",
     "lint": "echo \"No linting configured\""
   },
-  "keywords": ["iot", "waste-management", "mongodb", "express", "api"],
+  "keywords": [
+    "iot",
+    "waste-management",
+    "mongodb",
+    "express",
+    "api"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -17,6 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "i": "^0.3.7",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0"
   },
